# reactor_kun

./: .gitignore  0001-partial-file-load.patch  CMakeLists.txt  tgbot.patch
apps/: CMakeLists.txt  main.cpp
cmake/: Json.cmake  Plog.cmake  ReactorParser.cmake  TDLib.cmake  TGBot.cmake  UTF8String.cmake
cmake_externalprojects/: Json.cmake  Plog.cmake  ReactorParser.cmake  TGBot.cmake  UTF8String.cmake
include/ReactorKun/: AuxiliaryFunctions.hpp  BotDB.hpp  BotMessage.hpp  Config.hpp  FileManager.hpp  Parser.hpp  ReactorKun.hpp  Signature.hpp  SpinGuard.hpp  TgClient.hpp  TgLimits.hpp  ThreadPool.hpp
resources/configs/: config.json
src/: AuxiliaryFunctions.cpp  BotDB.cpp  BotMessage.cpp  CMakeLists.txt  Config.cpp  FileManager.cpp  Parser.cpp  ReactorKun.cpp  Signature.cpp  SpinGuard.cpp  TgClient.cpp  TgLimits.cpp  ThreadPool.cpp  main.cpp
src/classes/: AuxiliaryFunctions.cpp  BotDB.cpp  BotMessage.cpp  Config.cpp  FileManager.cpp  Parser.cpp  ReactorKun.cpp  ReactorParser.cpp  ReactorPost.cpp  TgLimits.cpp  ThreadPool.cpp
src/headers/: AuxiliaryFunctions.hpp  BotDB.hpp  BotMessage.hpp  Config.hpp  FileManager.hpp  Parser.hpp  ReactorKun.hpp  ReactorParser.hpp  ReactorPost.hpp  Signature.hpp  TgLimits.hpp  ThreadPool.hpp
